feat(dolphin): add new brokerage and show brokerage list

--- a/services/dolphin/public/views/dashboard.html
+++ b/services/dolphin/public/views/dashboard.html
@@ -457,7 +457,49 @@
     </div>
     <!-- Row ends -->
 
+    <script src="/public/js/jquery.min.js"></script>
+    <script src="/public/js/bootstrap.bundle.min.js"></script>
+    <script src="/public/js/moment.js"></script>
+
+
+    <!-- *************
+        ************ ./vendor Js Files *************
+    ************* -->
+    <!-- Slimscroll JS -->
+    <script src="/vendor/slimscroll/slimscroll.min.js"></script>
+    <script src="/vendor/slimscroll/custom-scrollbar.js"></script>
+
+    <!-- Daterange -->
+    <script src="/vendor/daterange/daterange.js"></script>
+    <script src="/vendor/daterange/custom-daterange.js"></script>
+
+    <!-- Chartist JS -->
+    <script src="/vendor/chartist/js/chartist.min.js"></script>
+    <script src="/vendor/chartist/js/chartist-tooltip.js"></script>
+    <script src="/vendor/chartist/js/custom/bar/stack-bar-chart.js"></script>
+    <script src="/vendor/chartist/js/custom/line/multiple-line-charts.js"></script>
+
+    <!-- jVector Maps -->
+    <script src="/vendor/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
+    <script src="/vendor/jvectormap/world-mill-en.js"></script>
+    <script src="/vendor/jvectormap/gdp-data.js"></script>
+
+    <!-- Custom JVector Maps -->
+    <script src="/vendor/jvectormap/custom/world-map-markers.js"></script>
+
+    <!-- Circliful js -->
+    <script src="/vendor/circliful/circliful.min.js"></script>
+    <script src="/vendor/circliful/circliful.custom.js"></script>
+
+    <!-- Rating JS -->
+    <script src="/vendor/rating/raty.js"></script>
+    <script src="/vendor/rating/raty-custom.js"></script>
+
+
+    <!-- Main JS -->
+    <script src="/public/js/main.js"></script>
+
 </div>
 
 <!--</main>-->
-{{ end }}login.html
+{{ end }}
