--- a/services/dolphin/public/views/layout/base.html
+++ b/services/dolphin/public/views/layout/base.html
@@ -6,20 +6,19 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="hossein varmazyar" name="author">
 
-    <link href="./public/img/fav.png" rel="shortcut icon">
-    <link href="./public/css/style.css" rel="stylesheet">
+    <link href="/public/img/fav.png" rel="shortcut icon">
+    <link href="/public/assets/style.css" rel="stylesheet">
 
     <!-- Bootstrap css -->
-    <link href="./public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Icomoon Font Icons css -->
-    <link href="./public/fonts/style.css" rel="stylesheet">
+    <link href="/public/fonts/style.css" rel="stylesheet">
 
     <!-- Main css -->
-    <link href="./public/css/main.css" rel="stylesheet">
+    <link href="/public/css/main.css" rel="stylesheet">
 </head>
 <body data-template="{{ .Template }}">
-
 <div class="page-wrapper">
 
     <!-- Sidebar wrapper start -->
@@ -67,49 +66,6 @@
 
     </div>
     <!-- Page content end -->
-
-    <script src="./public/js/jquery.min.js"></script>
-    <script src="./public/js/bootstrap.bundle.min.js"></script>
-    <script src="./public/js/moment.js"></script>
-
-
-    <!-- *************
-        ************ ./vendor Js Files *************
-    ************* -->
-    <!-- Slimscroll JS -->
-    <script src="./vendor/slimscroll/slimscroll.min.js"></script>
-    <script src="./vendor/slimscroll/custom-scrollbar.js"></script>
-
-    <!-- Daterange -->
-    <script src="./vendor/daterange/daterange.js"></script>
-    <script src="./vendor/daterange/custom-daterange.js"></script>
-
-    <!-- Chartist JS -->
-    <script src="./vendor/chartist/js/chartist.min.js"></script>
-    <script src="./vendor/chartist/js/chartist-tooltip.js"></script>
-    <script src="./vendor/chartist/js/custom/bar/stack-bar-chart.js"></script>
-    <script src="./vendor/chartist/js/custom/line/multiple-line-charts.js"></script>
-
-    <!-- jVector Maps -->
-    <script src="./vendor/jvectormap/jquery-jvectormap-2.0.3.min.js"></script>
-    <script src="./vendor/jvectormap/world-mill-en.js"></script>
-    <script src="./vendor/jvectormap/gdp-data.js"></script>
-
-    <!-- Custom JVector Maps -->
-    <script src="./vendor/jvectormap/custom/world-map-markers.js"></script>
-
-    <!-- Circliful js -->
-    <script src="./vendor/circliful/circliful.min.js"></script>
-    <script src="./vendor/circliful/circliful.custom.js"></script>
-
-    <!-- Rating JS -->
-    <script src="./vendor/rating/raty.js"></script>
-    <script src="./vendor/rating/raty-custom.js"></script>
-
-
-    <!-- Main JS -->
-    <script src="./public/js/main.js"></script>
-
 </div>
 </body>
 </html>
