--- a/services/dolphin/public/views/layout/header.html
+++ b/services/dolphin/public/views/layout/header.html
@@ -70,7 +70,7 @@
                         <li>
                             <a href="#">
                                 <div class="user-img away">
-                                    <img alt="User" src="img/user21.png">
+                                    <img alt="User" src="/img/user21.png">
                                 </div>
                                 <div class="details">
                                     <div class="user-title">مجتبی</div>
@@ -82,7 +82,7 @@
                         <li>
                             <a href="#">
                                 <div class="user-img busy">
-                                    <img alt="User" src="img/user10.png">
+                                    <img alt="User" src="/img/user10.png">
                                 </div>
                                 <div class="details">
                                     <div class="user-title">جعفر خان</div>
@@ -94,7 +94,7 @@
                         <li>
                             <a href="#">
                                 <div class="user-img online">
-                                    <img alt="User" src="img/user6.png">
+                                    <img alt="User" src="/img/user6.png">
                                 </div>
                                 <div class="details">
                                     <div class="user-title">مایکل</div>
@@ -115,7 +115,7 @@
                     <div class="header-profile-actions">
                         <div class="header-user-profile">
                             <div class="header-user">
-                                <img alt="Admin Template" src="img/user.png">
+                                <img alt="Admin Template" src="/img/user.png">
                             </div>
                             <h5>ژیان فریس</h5>
                             <p>ادمین</p>
