--- a/services/dolphin/public/views/brokerages/markets-table.html
+++ b/services/dolphin/public/views/brokerages/markets-table.html
@@ -1,7 +1,7 @@
 {{ define "title" }}{{ end }}
 
 {{ define "main" }}
-<table class="table custom-table" id="markets-table">
+<table class="table custom-table table-striped scrollable-table" id="markets-table">
     <thead>
     <tr>
         <th width="1">#</th>
