--- a/services/dolphin/styles/partials/grid.scss
+++ b/services/dolphin/styles/partials/grid.scss
@@ -5,6 +5,10 @@
     flex-flow:row wrap;
     -ms-flex-align:center;
 
+    &.ltr {
+        justify-content: flex-end;
+    }
+
     &.space-between {
         justify-content: space-between;
     }
