--- a/services/dolphin/styles/style.scss
+++ b/services/dolphin/styles/style.scss
@@ -2,4 +2,5 @@
 @import "partials/texts.scss";
 @import "partials/dimensions.scss";
 @import "partials/grid.scss";
-
+@import "partials/btn.scss";
+@import "partials/table.scss";
