--- a/services/dolphin/styles/style.scss
+++ b/services/dolphin/styles/style.scss
@@ -1,4 +1,4 @@
-@import "partials/text-input.scss";
+@import "partials/forms.scss";
 @import "partials/texts.scss";
 @import "partials/dimensions.scss";
 @import "partials/grid.scss";
