--- a/services/dolphin/public/views/resolutions/list.html
+++ b/services/dolphin/public/views/resolutions/list.html
@@ -1,6 +1,6 @@
 {{ template "base" .}}
 
-{{ define "title" }}brokerage list{{ end }}
+{{ define "title" }}resolution list{{ end }}
 
 {{ define "main" }}
 
