--- a/services/dolphin/src/pages/Dashboard/Dashboard.scss
+++ b/services/dolphin/src/pages/Dashboard/Dashboard.scss
@@ -20,23 +20,23 @@
   .brokerageSelectionButtons {
     padding: 1rem 10rem;
     text-align: end;
-
-    button {
-      margin: 0 0.5rem;
-      color: #2e323c;
-      border: 1px solid #1a8e5f;
-      border-radius: 4px;
-      padding: 0.5rem 2rem;
-      background-color: transparent;
-      background-repeat: no-repeat;
-      cursor: pointer;
-      overflow: hidden;
-      font-family: inherit;
-    }
-
-    button:hover {
-      background: #1a8e5f;
-      color: #fefefe;
-    }
+    //
+    //button {
+    //  margin: 0 0.5rem;
+    //  color: #2e323c;
+    //  border: 1px solid #1a8e5f;
+    //  border-radius: 4px;
+    //  padding: 0.5rem 2rem;
+    //  background-color: transparent;
+    //  background-repeat: no-repeat;
+    //  cursor: pointer;
+    //  overflow: hidden;
+    //  font-family: inherit;
+    //}
+    //
+    //button:hover {
+    //  background: #1a8e5f;
+    //  color: #fefefe;
+    //}
   }
 }
